--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,23 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "build": "tsc server.ts"
+    "build": "esbuild src/server.ts --bundle --format=cjs --platform=node --target=node24 --outfile=dist/server.js",
+    "start": "node ./dist/server.js"
   },
-  "type": "module",
   "author": "Zack Jones",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "cors": "2.8.5",
+    "express": "5.1.0",
+    "socket.io": "4.8.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/socket.io": "^3.0.1",
-    "typescript": "^5.8.3"
+    "@types/express": "5.0.3",
+    "@types/socket.io": "3.0.1",
+    "esbuild": "0.25.8",
+    "typescript": "5.8.3"
   }
 }
