--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc --project ../tsconfig.json && vite build",
-    "lint": "prettier --write . && eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,18 +16,11 @@
     "socket.io-client": "4.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "9.30.1",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react-swc": "3.10.2",
-    "eslint": "9.30.1",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.3.0",
-    "prettier": "3.6.2",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "8.35.1",
+    "typescript": "5.8.3",
     "vite": "7.0.4"
   }
 }
