--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -17,7 +17,7 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
+    "noUncheckedSideEffectImports": true
   },
   "include": ["vite.config.ts", "server"]
 }
