--- a/server/package.json
+++ b/server/package.json
@@ -2,22 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "dist/server.js",
-  "scripts": {
-    "build": "esbuild src/server.ts --bundle --format=cjs --platform=node --target=node24 --outfile=dist/server.js",
-    "start": "node ./dist/server.js"
-  },
   "author": "Zack Jones",
-  "license": "ISC",
-  "description": "",
+  "type": "module",
   "dependencies": {
-    "cors": "2.8.5",
-    "express": "5.1.0",
     "socket.io": "4.8.1"
   },
   "devDependencies": {
-    "@types/express": "5.0.3",
-    "@types/socket.io": "3.0.1",
-    "esbuild": "0.25.8",
-    "typescript": "5.8.3"
+    "@types/socket.io": "3.0.1"
   }
 }
