--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
+    "classnames": "^2.5.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "socket.io": "4.8.1",
-    "socket.io-client": "4.8.1"
+    "socket.io-client": "4.8.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@types/react": "19.1.8",
